<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.rakaadinugroho.msuryanusatara.core.authentication.signup.SignUpFragment">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_margin="@dimen/big_standard_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:padding="@dimen/small_standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_fullname"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:padding="@dimen/small_standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_username"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/signup_level"
            android:padding="@dimen/small_standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <android.support.design.widget.TextInputLayout
            android:padding="@dimen/small_standard_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:text="@string/button_signup"
            android:padding="@dimen/small_standard_margin"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/signup_anchor_signin"
            android:text="@string/anchor_signin"
            android:padding="@dimen/small_standard_margin"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>
