<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context="com.rakaadinugroho.msuryanusatara.core.dashboard.account.AccountFragment">
    <LinearLayout
        android:padding="@dimen/big_standard_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="@dimen/small_standard_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:gravity="center"
                    android:text="@string/detail_profil"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
                <TextView
                    android:text="@string/detail_name_label"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/detail_fullname"
                    android:text="@string/load_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
                <TextView
                    android:text="@string/detail_username_label"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/small_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/detail_username"
                    android:text="@string/load_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/detail_change_password"
                    android:text="@string/detail_change_password"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>
