<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rakaadinugroho.msuryanusatara.core.examination.ExaminationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="@dimen/small_standard_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:padding="@dimen/big_standard_margin"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/exam_title"
                        android:textSize="@dimen/small_text"
                        android:textColor="@color/colorGray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/exam_title"
                        android:text="@string/load_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/exam_total"
                        android:textSize="@dimen/small_text"
                        android:textColor="@color/colorGray"
                        android:layout_marginTop="@dimen/small_standard_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/exam_total"
                        android:text="@string/load_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/exam_time"
                        android:textSize="@dimen/small_text"
                        android:textColor="@color/colorGray"
                        android:layout_marginTop="@dimen/small_standard_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/exam_time"
                        android:text="@string/load_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/exam_join"
                        android:layout_marginTop="@dimen/big_standard_margin"
                        android:text="@string/exam_join"
                        android:textColor="@color/colorWhite"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
